[tool.poetry]
name = "dpg-forms"
version = "0.2.0"
description = ""
authors = ["Aeek True <aeektrue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test_all = "tests:test"
